--- a/index.html
+++ b/index.html
@@ -13,11 +13,13 @@
 <body>
     <h1>Inserisci la tua email</h1>
 
-    <form action="">
+    <!--<form action="">-->
         <label for="">mail</label>
-        <input type="text" id="inputMail">
-        <button onclick="controlla(); return false">conferma</button>
-    </form>
+        <input type="email" id="inputEmail">
+        <button onclick="controlla()">conferma</button>
+    <!--</form>-->
+
+    <h2 id="testo"></h2>
 
     <!--include Bootstrap's JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
