--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <title>Mail-Dadi</title>
 </head>
 <body>
+    <!--inserisci email-->
     <h1>Inserisci la tua email</h1>
 
     <!--<form action="">-->
@@ -20,6 +21,12 @@
     <!--</form>-->
 
     <h2 id="testo"></h2>
+
+    <!--gioco dadi-->
+    <span id="numGiocatore"></span>
+    <span id="numCpu"></span>
+
+    <h2 id="risultato"></h2>
 
     <!--include Bootstrap's JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
